--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -2,21 +2,52 @@
 #   Create a section for each of your site's languages.
 #   Documentation: https://docs.hugoblox.com/reference/language/
 
-# Default language
+# 한국어 (기본 언어)
+ko:
+  languageCode: ko-kr
+  title: "박현성 - 포트폴리오"
+  weight: 1
+  params:
+    description: "박현성의 개인 포트폴리오 사이트입니다."
+  menu:
+    main:
+      - name: "홈"
+        url: /
+        weight: 1
+      - name: "자기소개"
+        url: /about/
+        weight: 2
+      - name: "프로젝트"
+        url: /projects/
+        weight: 3
+      - name: "이력서"
+        url: /files/resume.pdf
+        weight: 4
+      - name: "연락하기"
+        url: /contact/
+        weight: 5
+
+# 영어 (보조 언어)
 en:
   languageCode: en-us
-  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
-  #contentDir: content/en
-
-# Uncomment the lines below to configure your website in a second language.
-#zh:
-#  languageCode: zh-Hans
-#  contentDir: content/zh
-#  title: Chinese website title...
-#  params:
-#    description: Site description in Chinese...
-#  menu:
-#    main:
-#      - name: 传
-#        url: '#about'
-#        weight: 1
+  title: "PARKHYEONSEONG - Portfolio"
+  weight: 2
+  params:
+    description: "Hyunseong Park’s personal portfolio website."
+  menu:
+    main:
+      - name: "Home"
+        url: /
+        weight: 1
+      - name: "About"
+        url: /about/
+        weight: 2
+      - name: "Projects"
+        url: /projects/
+        weight: 3
+      - name: "Resume"
+        url: /files/resume.pdf
+        weight: 4
+      - name: "Contact"
+        url: /contact/
+        weight: 5
