--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -1,12 +1,8 @@
-# Languages
-#   Create a section for each of your site's languages.
-#   Documentation: https://docs.hugoblox.com/reference/language/
-
 # 한국어 (기본 언어)
 ko:
   languageCode: ko-kr
-  title: "박현성 - 포트폴리오"
   contentDir: content/ko
+  title: "박현성 - 포트폴리오"
   weight: 1
   params:
     description: "박현성의 개인 포트폴리오 사이트입니다."
@@ -31,8 +27,8 @@ ko:
 # 영어 (보조 언어)
 en:
   languageCode: en-us
-  title: "PARKHYEONSEONG - Portfolio"
   contentDir: content/en
+  title: "Hyunseong Park - Portfolio"
   weight: 2
   params:
     description: "Hyunseong Park’s personal portfolio website."
