--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -15,7 +15,7 @@ ko:
         url: /about/
         weight: 2
       - name: "프로젝트"
-        url: /projects/
+        url: /project/
         weight: 3
       - name: "이력서"
         url: /files/resume.pdf
@@ -41,7 +41,7 @@ en:
         url: /about/
         weight: 2
       - name: "Projects"
-        url: /projects/
+        url: /project/
         weight: 3
       - name: "Resume"
         url: /files/resume.pdf
