--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -1,21 +1,16 @@
-# Navigation Links
-#   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
-  #     desired widget in your `content/home/` folder.
-  #   The weight parameter defines the order that the links will appear in.
-
 main:
-  - name: "홈"
-    url: /
-    weight: 1
-  - name: "자기소개"
-    url: /about/
-    weight: 2
-  - name: "프로젝트"
-    url: /project/
-    weight: 3
-  - name: "이력서"
-    url: /files/resume.pdf
-    weight: 4
-  - name: "연락하기"
-    url: /contact/
-    weight: 5
+- name: 홈
+  url: /
+  weight: 1
+- name: 자기소개
+  url: /about/
+  weight: 2
+- name: 프로젝트
+  url: /project/
+  weight: 3
+- name: 이력서
+  url: /uploads/resume.pdf
+  weight: 4
+- name: 연락하기
+  url: /about/contact/
+  weight: 5
