--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -117,9 +117,12 @@ appearance:
   # 파비콘/대표 이미지 (static/ 기준 경로)
   favicon: "images/favicon.ico"
   seo:
-    image: "images/og-cover.jpg"
-    description: "전북대학교 박현성의 포트폴리오 사이트입니다."
-
+  image: "images/og-cover.jpg"
+  description: "전북대학교 박현성의 포트폴리오 사이트입니다."
+  twitter:
+    card: "summary_large_image"
+    site: "@hyunseong"
+  
   # 헤더
   header:
     show_search: true              # 헤더 검색 아이콘
