--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -1,25 +1,26 @@
-# Essentially Minimal theme but with constant home section bg color.
-name = "Starter Blog"
+# Hyunseong Park Custom Theme
+name = "Hyunseong Portfolio"
 
 [light]
-  # Primary
-  primary = "#2962ff"
+  # Primary (메인 포인트 색) — 진한 청록색 계열
+  primary = "#009688"
 
-  # Menu
-  menu_primary = "rgb(247, 250, 252)"
-  menu_text = "#34495e"
-  menu_text_active = "#2962ff"
-  menu_title = "#2b2b2b"
+  # Menu (헤더)
+  menu_primary = "rgb(245, 248, 250)"
+  menu_text = "#263238"
+  menu_text_active = "#009688"
+  menu_title = "#1E293B"
 
-  # Home sections
-  home_section_odd = "rgb(247, 250, 252)"
-  home_section_even = "rgb(247, 250, 252)"
+  # Home sections (교차 배경색)
+  home_section_odd = "rgb(245, 248, 250)"
+  home_section_even = "rgb(255, 255, 255)"
 
 [dark]
-  primary = "#bbdefb"
-  link = "#bbdefb"
-  link_hover = "#bbdefb"
-  background = "rgb(26, 32, 44)"
-  home_section_odd = "rgb(26, 32, 44)"
-  home_section_even = "rgb(26, 32, 44)"
-  menu_primary = "rgb(26, 32, 44)"
+  # Primary — 밝은 민트색으로 대비
+  primary = "#4DB6AC"
+  link = "#4DB6AC"
+  link_hover = "#80CBC4"
+  background = "rgb(24, 30, 38)"
+  home_section_odd = "rgb(24, 30, 38)"
+  home_section_even = "rgb(24, 30, 38)"
+  menu_primary = "rgb(24, 30, 38)"
