--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -5,9 +5,26 @@ main:
 - name: 자기소개
   url: /about/
   weight: 2
+
 - name: 프로젝트
   url: /project/
   weight: 3
+  
+- name: "AI 캐릭터"
+  url: /project/cartoon/
+  parent: "project"
+  weight: 31
+
+- name: "화장품 추천"
+  url: /project/cosmetics/
+  parent: "project"
+  weight: 32
+
+- name: "콘텐츠 추천"
+  url: /project/recommendation/
+  parent: "project"
+  weight: 33
+
 - name: 이력서
   url: /uploads/resume.pdf
   weight: 4
