--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -1,34 +1,38 @@
 main:
-- name: 홈
-  url: /
-  weight: 1
-- name: 자기소개
-  url: /about/
-  weight: 2
+  - name: "홈"
+    url: /
+    weight: 1
 
-- name: 프로젝트
-  url: /project/
-  identifier: "project"
-  weight: 3
+  - name: "자기소개"
+    url: /about/
+    weight: 2
 
-- name: "AI 캐릭터"
-  url: /project/cartoon/
-  parent: "project"
-  weight: 31
+  # 부모 (identifier 필수)
+  - name: "프로젝트"
+    identifier: "project"
+    pageRef: "project"     # ← /content/<lang>/project/_index.md 를 가리킴 (없어도 동작)
+    weight: 3
 
-- name: "화장품 추천"
-  url: /project/cosmetics/
-  parent: "project"
-  weight: 32
+  # 자식들 (pageRef 사용)
+  - name: "AI 캐릭터"
+    pageRef: "project/cartoon"
+    parent: "project"
+    weight: 31
 
-- name: "콘텐츠 추천"
-  url: /project/recommendation/
-  parent: "project"
-  weight: 33
+  - name: "화장품 추천"
+    pageRef: "project/cosmetics"
+    parent: "project"
+    weight: 32
 
-- name: 이력서
-  url: /uploads/resume.pdf
-  weight: 4
-- name: 연락하기
-  url: /about/#contact
-  weight: 5
+  - name: "콘텐츠 추천"
+    pageRef: "project/recommendation"
+    parent: "project"
+    weight: 33
+
+  - name: "이력서"
+    url: /uploads/resume.pdf
+    weight: 4
+
+  - name: "연락하기"
+    url: /about/#contact
+    weight: 5
