--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -5,23 +5,23 @@ ko:
   weight: 1
   params:
     description: 박현성의 개인 포트폴리오 사이트입니다.
-  menu:
-    main:
-    - name: 홈
-      url: /
-      weight: 1
-    - name: 자기소개
-      url: /about/
-      weight: 2
-    - name: 프로젝트
-      url: /project/
-      weight: 3
-    - name: 이력서
-      url: /uploads/resume.pdf
-      weight: 4
-    - name: 연락하기
-      url: /about/#contact
-      weight: 5
+  # menu:
+  #   main:
+  #   - name: 홈
+  #     url: /
+  #     weight: 1
+  #   - name: 자기소개
+  #     url: /about/
+  #     weight: 2
+  #   - name: 프로젝트
+  #     url: /project/
+  #     weight: 3
+  #   - name: 이력서
+  #     url: /uploads/resume.pdf
+  #     weight: 4
+  #   - name: 연락하기
+  #     url: /about/#contact
+  #     weight: 5
 en:
   languageCode: en-us
   contentDir: content/en
@@ -29,20 +29,20 @@ en:
   weight: 2
   params:
     description: Hyunseong Park’s personal portfolio website.
-  menu:
-    main:
-    - name: Home
-      url: /
-      weight: 1
-    - name: About
-      url: /about/
-      weight: 2
-    - name: Projects
-      url: /project/
-      weight: 3
-    - name: Resume
-      url: /uploads/resume.pdf
-      weight: 4
-    - name: Contact
-      url: /about/#contact
-      weight: 5
+  # menu:
+  #   main:
+  #   - name: Home
+  #     url: /
+  #     weight: 1
+  #   - name: About
+  #     url: /about/
+  #     weight: 2
+  #   - name: Projects
+  #     url: /project/
+  #     weight: 3
+  #   - name: Resume
+  #     url: /uploads/resume.pdf
+  #     weight: 4
+  #   - name: Contact
+  #     url: /about/#contact
+  #     weight: 5
