--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -1,37 +1,34 @@
 main:
-  - identifier: "home"
-    pageRef: "/"
-    weight: 1
+- name: 홈
+  url: /
+  weight: 1
+- name: 자기소개
+  url: /about/
+  weight: 2
 
-  - identifier: "about"
-    pageRef: "about"
-    weight: 2
+- name: 프로젝트
+  url: /project/
+  identifier: "project"
+  weight: 3
 
-  - identifier: "project"
-    identifier: "project"
-    pageRef: "project"
-    weight: 3
+- name: "AI 캐릭터"
+  url: /project/cartoon/
+  parent: "project"
+  weight: 31
 
-  - identifier: "resume"
-    url: "/uploads/resume.pdf"
-    weight: 4
+- name: "화장품 추천"
+  url: /project/cosmetics/
+  parent: "project"
+  weight: 32
 
-  - identifier: "contact"
-    url: "/about/#contact"
-    weight: 5
+- name: "콘텐츠 추천"
+  url: /project/recommendation/
+  parent: "project"
+  weight: 33
 
-  # Children under 'project'
-  - identifier: "p-cartoon"
-    pageRef: "project/cartoon"
-    parent: "project"
-    weight: 31
-
-  - identifier: "p-cosmetics"
-    pageRef: "project/cosmetics"
-    parent: "project"
-    weight: 32
-
-  - identifier: "p-reco"
-    pageRef: "project/recommendation"
-    parent: "project"
-    weight: 33
+- name: 이력서
+  url: /uploads/resume.pdf
+  weight: 4
+- name: 연락하기
+  url: /about/#contact
+  weight: 5
